# markora

./: .gitignore  LICENSE  README.md  RELEASING.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
src/: App.svelte  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  watcher.rs
src-tauri/src/commands/: file.rs  markdown.rs  mod.rs
src-tauri/src/markdown/: mod.rs  parser.rs
src/lib/components/: DropZone.svelte  MarkdownEditor.svelte  MarkdownViewer.svelte  Outline.svelte  SearchBar.svelte  TabBar.svelte  Toolbar.svelte
src/lib/services/: editor-theme.ts  highlighter.ts  tauri-commands.ts
src/lib/stores/: document.svelte.ts  settings.svelte.ts
src/lib/styles/: global.css  markdown-body.css
src/lib/styles/themes/: dark.css  light.css  sepia.css
src/lib/types/: index.ts
src/lib/utils/: platform.ts
