[package]
name = "markora"
version = "0.1.0"
edition = "2021"

[lib]
name = "markora_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "markora"
path = "src/main.rs"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
comrak = { version = "0.38", default-features = false, features = ["shortcodes"] }
notify = "7"
notify-debouncer-mini = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
